objects/GBLite__GB_Save_Cache__c.object
<CustomObject>
    <description>GridBuddy - Object that will temporarily hold data that needs to be saved for a particular user when current save context can&apos;t save all data because governors are maxed.</description>
    <fields>
        <fullName>GBLite__Cache1__c</fullName>
        <label>Cache1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Cache2__c</fullName>
        <label>Cache2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Cache3__c</fullName>
        <label>Cache3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__ErrorCache__c</fullName>
        <label>ErrorCache</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Grid__c</fullName>
        <description>Name of the Grid that data is being saved for.</description>
        <label>Grid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GB Save Cache</label>
    <listViews>
        <fullName>GBLite__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_GB_Save_Cache</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Save Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GB Save Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>